# 007

./: .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE
src/: .gitignore  BUILD.bazel  README.md
src/bootloader/: BUILD.bazel  README.md  bootcode.s
src/cdata/: BUILD.bazel  c_data_filler.c
src/cfb/: BUILD.bazel  README.md  cfb.c  cfb.h
src/decompbuf/: BUILD.bazel  decompressbuffer.c
src/font/: BUILD.bazel  README.md  data.json  font.s
src/game/: BUILD.bazel  README.md  bg.c  blood_animation.c  blood_decrypt.c  bond.c  bond.h  bond_data.c  bondinv.c  bondtypes.h  bondwalk.c  cheat_buttons.c  chr.c  chr.h  chr2.c  chrai.h  chrobjdata.c  chrobjdata.h  chrobjhandler.c  cleanup_alarms.c  cleanup_objectives.c  compiletime.c  convertangleusinginverse.c  cpu_cycle_count.c  deb_loadallmodels.c  decompress.c  dyn.c  float2int.c  game_debug.c  gamefile.c  image.c  image_bank.c  indy_commands.h  indy_comms.c  indy_comms.h  initBondDATAdefaults.c  initanitable.c  initcameraandthrown.c  initexplosioncasing.c  initgamedata.c  (+73 more)
src/game/GlobalImageTable/: BUILD.bazel  GlobalImageTable.c
src/game/ai/: BUILD.bazel  chrai.c  chrai.h
src/game/bg/: BUILD.bazel  bg.c
src/game/blood/: BUILD.bazel  blood_image.c
src/game/bond/: BUILD.bazel  bond.c  bond_data.c
src/game/bondinv/: BUILD.bazel  bondinv.c
src/game/bondtypes/: BUILD.bazel  bondtypes.h
src/game/bondwalk/: BUILD.bazel  bondwalk.c
src/game/bondwalk2/: BUILD.bazel  bondwalk2.c
src/game/cheat_buttons/: BUILD.bazel  cheat_buttons.c
src/game/chr/: BUILD.bazel  chr.c  chr.h
src/game/chr2/: BUILD.bazel  chr2.c
src/game/chrobjdata/: BUILD.bazel  chrobjdata.c
src/game/chrobjhandler/: BUILD.bazel  chrobjhandler.c
src/game/cleanupSFXRelated/: BUILD.bazel  cleanupSFXRelated.c
src/game/cleanup_alarms/: BUILD.bazel  cleanup_alarms.c
src/game/cleanup_objectives/: BUILD.bazel
src/game/cleanup_objects/: BUILD.bazel  cleanup_objects.c
src/game/color/: BUILD.bazel  color.h
src/game/compiletime/: BUILD.bazel
src/game/convertangleusinginverse/: BUILD.bazel
src/game/coordinate/: BUILD.bazel  coordinate.h
src/game/cpu_cycle_count/: BUILD.bazel
src/game/debugmenu/: BUILD.bazel  debugmenu_08FE00.c  debugmenu_090490.c
src/game/decompress/: BUILD.bazel  decompress.c
src/game/dyn/: BUILD.bazel  dyn.c
src/game/eeprom/: BUILD.bazel  eeprom.c
src/game/ejectedcartridges/: BUILD.bazel  ejectedcartridges.c
src/game/float2int/: BUILD.bazel
src/game/fog/: BUILD.bazel  fog.c
src/game/game_debug/: BUILD.bazel
src/game/gamefile/: BUILD.bazel  gamefile.c
src/game/image/: BUILD.bazel
src/game/image_bank/: BUILD.bazel
src/game/indy/: BUILD.bazel  indy_commands.c  indy_commands.h
src/game/initBondDATA/: BUILD.bazel  initBondDATA.c
src/game/initBondDATAdefaults/: BUILD.bazel  initBondDATAdefaults.c
src/game/initactorpropstuff/: BUILD.bazel  initactorpropstuff.c
src/game/initanitable/: BUILD.bazel
src/game/initcameraandthrown/: BUILD.bazel
src/game/initexplosioncasing/: BUILD.bazel
src/game/initgamedata/: BUILD.bazel
src/game/initguards/: BUILD.bazel  initguards.c
src/game/initimages/: BUILD.bazel
src/game/initintromatrices/: BUILD.bazel  initintromatrices.c
src/game/inititemslots/: BUILD.bazel  inititemslots.c
src/game/initmenus/: BUILD.bazel
src/game/initmttex/: BUILD.bazel  initmttex.c
src/game/initnull_0009D0/: BUILD.bazel  initnull_0009D0.c
src/game/initnull_000BC0/: BUILD.bazel
src/game/initobjects/: BUILD.bazel  initobjects.c
src/game/initpathtablelinks/: BUILD.bazel  initpathtablelinks.c
src/game/initpathtablesomething/: BUILD.bazel
src/game/initunk_0009E0/: BUILD.bazel  initunk_0009E0.c
src/game/initunk_000B60/: BUILD.bazel  initunk_000B60.c
src/game/initunk_005450/: BUILD.bazel  initunk_005450.c
src/game/initunk_005520/: BUILD.bazel
src/game/initunk_007180/: BUILD.bazel
src/game/initunk_007290/: BUILD.bazel
src/game/initunk_0072B0/: BUILD.bazel  initunk_0072B0.c
src/game/initunk_0073B0/: BUILD.bazel  initunk_0073B0.c
src/game/initunk_007460/: BUILD.bazel  initunk_007460.c
src/game/initweaponanigroups/: BUILD.bazel  initweaponanigroups.c
src/game/intro_logos/: BUILD.bazel  intro_logos.c
src/game/lightfixture/: BUILD.bazel  lightfixture.c
src/game/loadobjectmodel/: BUILD.bazel  loadobjectmodel.c
src/game/lvl/: BUILD.bazel  lvl.c  lvl.h
src/game/lvl_2/: BUILD.bazel  lvl_2.c
src/game/lvl_text/: BUILD.bazel  lvl_text.c
src/game/mainmenu/: BUILD.bazel  mainmenu.c  mainmenu.h
src/game/matrixmath/: BUILD.bazel  matrixmath.c
src/game/mp/: BUILD.bazel  mp_music.c  mp_watch.c  mp_weapon.c
src/game/music/: BUILD.bazel
src/game/ob/: BUILD.bazel
src/header/: BUILD.bazel  README.md  rom_header.s
src/images/: .gitignore  BUILD.bazel  README.md  data.json  link_binaries.bzl
src/inflate/: BUILD.bazel  README.md  inflate.c
src/libultra/: README.md
src/microcodes/: README.md
src/music/: BUILD.bazel  README.md  music.s
src/n64/: BUILD.bazel  constants.ld
src/obseg/: BUILD.bazel  README.md  ob_seg.s
src/ramrom/: BUILD.bazel  README.md  data.json  ramrom.s
src/romfiles/: BUILD.bazel  data.json  romfiles.s  romfiles2.s
src/roombuf/: BUILD.bazel  room_model_buffer.c  room_model_buffer.h
src/sdl/: BUILD.bazel  log.cpp  log.h  main.cpp
src/segments/: BUILD.bazel  bss.segment  compressed.segment  kernel.segment  romfiles.segment  text.segment  usa.rom
src/stacks/: BUILD.bazel  README.md  stacks.c
src/start/: BUILD.bazel  _start.s
src/system/: BUILD.bazel  README.md  audio.c  bondaicommands.h  bondconstants.h  boot.c  boss.c  deb.c  deb_print.c  deb_video.c  debugmenu.c  init.c  joy.c  joy_rumble.c  mema.c  memp.c  music.c  music.h  osMapTLB.c  pi.c  ramrom.c  random.c  rmon.c  sched.c  sched.h  snd.c  speed_graph.c  sprintf.c  str.c  tlb_hardwire.c  tlb_manage.c  tlb_random.c  tlb_resolve.c  token.c  vi.c  video.c
tools/mips2ir/: .gitignore  BUILD.bazel  README.md  go.mod  go.sum  main.go
tools/romlink/: .gitignore  BUILD.bazel  Makefile  cmd.go  go.mod  go.sum  main.go  main_test.go  output.go  romlink.go
(+435 files in other folders)
