load("//tools/gecc:gecc.bzl", "gecc_library")

exports_files([
    "bondaicommands.h",
    "bondtypes.h",
    "chr.h",
    "chrobjdata.h",
    "player.h",
    "players.h",
    "unk_0A1DA0.h",
    "xyzpoint.h",
    "mainmenu.h",
    "lvl.h",
])

gecc_library(
    name = "initunk_007180",
    srcs = [
        "initunk_007180.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "initunk_007290",
    srcs = [
        "initunk_007290.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "initunk_0072B0",
    srcs = [
        "initunk_0072B0.c",
        "//src/game:player.h",
        "//src/game:xyzpoint.h",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "initunk_0073B0",
    srcs = [
        "initunk_0073B0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "initunk_007460",
    srcs = [
        "initunk_007460.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "intro_logos",
    srcs = [
        "intro_logos.c",
        "//src/game:bondtypes.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "lvl_2",
    srcs = [
        "lvl.h",
        "lvl_2.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "lvl",
    srcs = [
        "lvl.c",
        "//src/game:mainmenu.h",
        "//src/game:bondtypes.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "lvl_text",
    srcs = [
        "lvl_text.c",
        "//src/game:bondtypes.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "mainmenu",
    srcs = [
        "mainmenu.c",
        "//src/game:mainmenu.h",
        "//src/game:bondtypes.h",
        "//src/system:includes",
        "//src/system:music.h",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "null_007970",
    srcs = [
        "null_007970.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "objecthandler_2",
    srcs = [
        "objecthandler_2.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "objecthandler",
    srcs = [
        "objecthandler.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "objective",
    srcs = [
        "objective.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "objective_status2",
    srcs = [
        "objective_status2.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "objective_status",
    srcs = [
        "objective_status.c",
        "//src/game:bondtypes.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "prop",
    srcs = [
        "prop.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "rsp",
    srcs = [
        "rsp.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "setguscale",
    srcs = [
        "setguscale.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "stan",
    srcs = [
        "stan.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "textrelated",
    srcs = [
        "textrelated.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "truncf",
    srcs = [
        "truncf.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_007800",
    srcs = [
        "unk_007800.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_007920",
    srcs = [
        "unk_007920.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_007980",
    srcs = [
        "unk_007980.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_01B0E0",
    srcs = [
        "unk_01B0E0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_01B240",
    srcs = [
        "unk_01B240.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_01BAE0",
    srcs = [
        "unk_01BAE0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "sqrt_tan_angle_plus_one",
    srcs = [
        "sqrt_tan_angle_plus_one.c",
        "//src/libultra/include",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_05AB70",
    srcs = [
        "unk_05AB70.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_05ACB0",
    srcs = [
        "unk_05ACB0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_05AE00",
    srcs = [
        "unk_05AE00.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_05B1E0",
    srcs = [
        "unk_05B1E0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_08DBB0",
    srcs = [
        "unk_08DBB0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_091080",
    srcs = [
        "unk_091080.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_092890",
    srcs = [
        "unk_092890.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_092E50",
    srcs = [
        "unk_092E50.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_09B600",
    srcs = [
        "unk_09B600.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_09B7A0",
    srcs = [
        "unk_09B7A0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_09C250",
    srcs = [
        "unk_09C250.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0A1DA0",
    srcs = [
        "unk_0A1DA0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0B3200",
    srcs = [
        "unk_0B3200.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0BC530",
    srcs = [
        "unk_0BC530.c",
        "//src/game:player.h",
        "//src/game:xyzpoint.h",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0CC4C0",
    srcs = [
        "unk_0CC4C0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0D1AC0",
    srcs = [
        "unk_0D1AC0.c",
    ],
    visibility = ["//visibility:public"],
)
