load("//tools/gecc:gecc.bzl", "gecc_library")

exports_files([
    "bondaicommands.h",
    "bondtypes.h",
    "chr.h",
    "chrobjdata.h",
    "player.h",
    "players.h",
    "unk_0A1DA0.h",
    "xyzpoint.h",
    "mainmenu.h",
    "lvl.h",
])

gecc_library(
    name = "unk_05B1E0",
    srcs = [
        "unk_05B1E0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_08DBB0",
    srcs = [
        "unk_08DBB0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_091080",
    srcs = [
        "unk_091080.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_092890",
    srcs = [
        "unk_092890.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_092E50",
    srcs = [
        "unk_092E50.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_09B600",
    srcs = [
        "unk_09B600.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_09B7A0",
    srcs = [
        "unk_09B7A0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_09C250",
    srcs = [
        "unk_09C250.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0A1DA0",
    srcs = [
        "unk_0A1DA0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0B3200",
    srcs = [
        "unk_0B3200.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0BC530",
    srcs = [
        "unk_0BC530.c",
        "//src/game:player.h",
        "//src/game:xyzpoint.h",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0CC4C0",
    srcs = [
        "unk_0CC4C0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0D1AC0",
    srcs = [
        "unk_0D1AC0.c",
    ],
    visibility = ["//visibility:public"],
)
