load("//tools/gecc:gecc.bzl", "gecc_library")

exports_files([
    "bondaicommands.h",
    "bondtypes.h",
    "chr.h",
    "chrobjdata.h",
    "player.h",
    "players.h",
    "unk_0A1DA0.h",
    "xyzpoint.h",
    "mainmenu.h",
    "lvl.h",
])

gecc_library(
    name = "unk_0B3200",
    srcs = [
        "unk_0B3200.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0CC4C0",
    srcs = [
        "unk_0CC4C0.c",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "unk_0D1AC0",
    srcs = [
        "unk_0D1AC0.c",
    ],
    visibility = ["//visibility:public"],
)
