genrule(
    name = "usa_ld",
    srcs = [
        "usa.rom",
        "bss.segment",
        "compressed.segment",
        "romfiles.segment",
        "ramrom/ramrom.segment",
        "romfiles/romfiles.segment",
        "romfiles/romfiles2.segment",
        "font/font.segment",
        "music/music.segment",
        "system/bss.segment",
        "cdata/cdata.segment",
        "cfb/cfb.segment",
        "kernel.segment",
        "system/data.segment",
        "decompbuf/decompbuf.segment",
        "system/rodata.segment",
        "stacks/sbss.segment",
        "system/text.segment",
        "start/start.segment",
        "microcodes/text.segment",
        "microcodes/rodata.segment",
        "microcodes/data.segment",
        "bootloader/boot.segment",
        "libultra/src/rodata.segment",
        "libultra/src/text.segment",
        "libultra/src/bss.segment",
        "libultra/src/data.segment",
        "header/htext.segment",
        "inflate/inflate.segment",
        "obseg/obseg.segment",
        "//src/images",
        "game/bss.segment",
        "game/data.segment",
        "game/rodata.segment",
        "game/romfiles.segment",
        "roombuf/roombuf.segment",
        "game/text.segment",
        "text.segment",
    ],
    outs = ["usa.ld"],
    cmd = """
mkdir src/segments/images
cp $$(echo $(locations //src/images) | awk '{print $$NF}') src/segments/images
(cd src/segments && ../../$(location //tools/romlink) ./usa.rom) > $@
""",
    tools = ["//tools/romlink"],
    visibility = ["//visibility:public"],
)
