load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "mips2ir",
    embed = [":mips2ir_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "mips2ir_lib",
    srcs = ["main.go"],
    importpath = "mips2ir",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/mips2ir/frontend",
        "//tools/mips2ir/reassembler",
    ]
)
