load("//tools/gecc:gecc.bzl", "gecc_library")

exports_files([
    "bond.h",
])

gecc_library(
    name = "bond",
    srcs = [
        "bond.c",
        "bond.h",
        "//src/game/coordinate:coordinate.h",
        "//src/game/player:player.h",
        "//src/game/players:players.h",
    ],
    visibility = ["//visibility:public"],
)

gecc_library(
    name = "bond_data",
    srcs = [
        "bond_data.c",
        "//src/game/chr:chr.h",
    ],
    visibility = ["//visibility:public"],
)
