load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "bondinv",
    srcs = [
        "bondinv.c",
        "//src/game:bond.h",
        "//src/game:chr.h",
        "//src/game:player.h",
        "//src/game:players.h",
        "//src/game:xyzpoint.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)
