load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "bondinv",
    srcs = [
        "bondinv.c",
        "//src/game:player.h",
        "//src/game:players.h",
        "//src/game:coordinate.h",
        "//src/game/bond:bond.h",
        "//src/game/chr:chr.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)
