load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "bondinv",
    srcs = [
        "bondinv.c",
        "//src/game/bond:bond.h",
        "//src/game/chr:chr.h",
        "//src/game/coordinate:coordinate.h",
        "//src/game/player:player.h",
        "//src/game/players:players.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)
