load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "bondwalk",
    srcs = [
        "bondwalk.c",
        "//src/game:bondtypes.h",
        "//src/game:player.h",
        "//src/game:xyzpoint.h",
        "//src/game/chrobjdata:chrobjdata.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)
