load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "bondwalk",
    srcs = [
        "bondwalk.c",
        "//src/game/player:player.h",
        "//src/game/coordinate:coordinate.h",
        "//src/game/chrobjdata:chrobjdata.h",
        "//src/game/color:color.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)
