load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "bondwalk",
    srcs = [
        "bondwalk.c",
        "//src/game/chrobjdata:chrobjdata.h",
        "//src/game/color:color.h",
        "//src/game/coordinate:coordinate.h",
        "//src/game/player:player.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)
