load("//tools/gecc:gecc.bzl", "gecc_library")

exports_files([
    "chrobjdata.h"
])

gecc_library(
    name = "chrobjdata",
    srcs = [
        "chrobjdata.c",
        "chrobjdata.h",
        "//src/game:bondaicommands.h",
        "//src/game:bondtypes.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)
