load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "cleanup_alarms",
    srcs = [
        "cleanup_alarms.c",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cleanup_alarms_pc",
    srcs = [
        "cleanup_alarms.c",
    ],
    visibility = ["//visibility:public"],
)
