load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "game_debug",
    srcs = [
        "game_debug.c",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "game_debug_pc",
    srcs = [
        "game_debug.c",
    ],
    visibility = ["//visibility:public"],
)
