load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "initintromatrices",
    srcs = [
        "initintromatrices.c",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "initintromatrices_pc",
    srcs = [
        "initintromatrices.c",
    ],
    visibility = ["//visibility:public"],
)
