load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "initweaponanigroups",
    srcs = [
        "initweaponanigroups.c",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "initweaponanigroups_pc",
    srcs = [
        "initweaponanigroups.c",
    ],
    visibility = ["//visibility:public"],
)
