load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "lvl",
    srcs = [
        "lvl.c",
        "//src/game:bondtypes.h",
        "//src/game/color:color.h",
        "//src/game/mainmenu:mainmenu.h",
        "//src/system:includes",
    ],
    visibility = ["//visibility:public"],
)
