load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "mainmenu",
    srcs = [
        "mainmenu.c",
        "//src/game:bondtypes.h",
        "//src/game:mainmenu.h",
        "//src/system:includes",
        "//src/system:music.h",
    ],
    visibility = ["//visibility:public"],
)
