load("//tools/gecc:gecc.bzl", "gecc_library")

exports_files([
    "mainmenu.h",
])

gecc_library(
    name = "mainmenu",
    srcs = [
        "mainmenu.c",
        "//src/game/color:color.h",
        "//src/game/mainmenu:mainmenu.h",
        "//src/system:includes",
        "//src/system:music.h",
    ],
    visibility = ["//visibility:public"],
)
