load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "players",
    srcs = [
        "players.c",
        "//src/game:lvl.h",
        "//src/game:player.h",
        "//src/game:players.h",
        "//src/game:xyzpoint.h",
        "//src/game/bond:bond.h",
        "//src/game/chr:chr.h",
    ],
    visibility = ["//visibility:public"],
)
