load("//tools/gecc:gecc.bzl", "gecc_library")

exports_files([
    "players.h",
])

gecc_library(
    name = "players",
    srcs = [
        "players.c",
        "players.h",
        "//src/game:player.h",
        "//src/game/coordinate:coordinate.h",
        "//src/game/bond:bond.h",
        "//src/game/chr:chr.h",
        "//src/game/lvl:lvl.h",
    ],
    visibility = ["//visibility:public"],
)
