load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "playerstats",
    srcs = [
        "playerstats.c",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "playerstats_pc",
    srcs = [
        "playerstats.c",
    ],
    visibility = ["//visibility:public"],
)
