load("//tools/gecc:gecc.bzl", "gecc_library")

gecc_library(
    name = "setguscale",
    srcs = [
        "setguscale.c",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "setguscale_pc",
    srcs = [
        "setguscale.c",
    ],
    visibility = ["//visibility:public"],
)
